trying to fix issue with scrolling out of bounds and making the color match the background even when scrolling out

--- a/footer.css
+++ b/footer.css
@@ -1,5 +1,6 @@
 #footer {
     background-color: none;
+    background-image: linear-gradient(#171a54, #000000);
     padding: 20px 40px;
     margin-top: auto;
 }
