--- a/main.css
+++ b/main.css
@@ -5,18 +5,25 @@
     font-family: "IBM Plex Sans", sans-serif;
 }
 
-/* html {
-    overflow: hidden;
-    height: 100%;
-} */
+html {
+    background-color: #000000;
+    background-image: linear-gradient(#000000, #000000 calc(0% + 112px), #171a54 calc(100% - 179.1px)); 
+}
 
 body {
-    /* overflow: auto;
-    height: 100%; */
-    background-image: linear-gradient(#000000, #171a54);
+    /* background-image: linear-gradient(#000000, #171a54); */
+    overflow-x: hidden;
 }
 
 img {
     max-width: 100%;
     display: block;
+}
+
+main {
+    background-image: linear-gradient(#000000, #171a54);
+}
+
+header, main, footer {
+    margin: 0;
 }
